2012-07-27  Antoine Labour  <piman@chromium.org>

        [chromium] Fix color matrix filter computation so that filters that don't need clamping are correctly detected as such
        https://bugs.webkit.org/show_bug.cgi?id=92452

        Reviewed by Stephen White.

        Because of precision issues, some filters were returning true to
        matrixNeedsClamping when they can return false. This fixes it.

        No new tests in this CL, a follow-up change refactors the code to add
        several tests.

        * platform/graphics/chromium/cc/CCRenderSurfaceFilters.cpp:

2012-07-27  Jer Noble  <jer.noble@apple.com>

        Add diagnostic logging for plugins-per-page.
        https://bugs.webkit.org/show_bug.cgi?id=92538

        Reviewed by Anders Carlsson.

        Add some diagnostic logging for whether a page has seen a plugin, and 
        whether a page has seen a plugin of a specific type.

        Move the diagnostic logging out of the elemements themselves:
        * html/HTMLEmbedElement.cpp:
        (WebCore::HTMLEmbedElement::updateWidget):
        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::updateWidget):

        Instead, log when the plugin is requested, thereby catching plugins which are
        rejected because, e.g., Java is disabled or not installed:
        * loader/SubframeLoader.cpp:
        (WebCore::logPluginRequest):
        (WebCore::SubframeLoader::requestObject):
        (WebCore::SubframeLoader::createJavaAppletWidget):

        Add new diagnostic key values:
        * page/DiagnosticLoggingKeys.cpp:
        (WebCore::DiagnosticLoggingKeys::pageContainsPluginKey):
        (WebCore::DiagnosticLoggingKeys::pageContainsAtLeastOnePluginKey):
        * page/DiagnosticLoggingKeys.h:

        Add a map of plugin types seen per-page for diagnostic purposes:
        * page/Page.cpp:
        (WebCore::Page::hasSeenAnyPlugin):
        (WebCore::Page::hasSeenPlugin):
        (WebCore::Page::sawPlugin):